# alzheimer_classification_tcc

./: .gitignore  README.md  pyproject.toml
Data/: annotations.csv  data_augmentation.py  pre_processing_pipeline.py  reducing_original_dataset.ipynb  step5_entropy_slice_selection.py
models/: densenet_binary_class_original.py  linear_probe_medsig.py
scripts/: reducing_original_dataset.ipynb  select_slices_axiais.py  select_slices_sagitais.py  split_3D_dataset.py  split_dataset.py  validate_adni_axial_dataset.py
