[project]
name = "development-wokspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ants>=0.0.7",
    "flirt>=0.0.2",
    "hd-bet>=2.0.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "pip>=26.0.1",
    "scipy>=1.17.1",
    "six>=1.17.0",
]
